--- a/Login/WebRoot/css/login_style_ie.css
+++ b/Login/WebRoot/css/login_style_ie.css
@@ -282,8 +282,10 @@ input[type=submit]:active {
 	float:left;
 	font-size:10px;
 	color:grey;
-	position:relative;
-	top:355px;
+	/*position:relative;
+	top:355px;*/
+	position:fixed;
+	bottom:0;
 	text-align:center;
 }
 #sfact{
