--- a/Login/.settings/org.eclipse.wst.common.component
+++ b/Login/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
     <wb-module deploy-name="Login">
         <wb-resource deploy-path="/" source-path="/WebRoot"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/junit_test"/>
         <property name="context-root" value="/Login"/>
         <property name="java-output-path" value="/Login/WebRoot/WEB-INF/classes"/>
     </wb-module>
