--- a/Login/WebRoot/css/login_style_ie.css
+++ b/Login/WebRoot/css/login_style_ie.css
@@ -226,9 +226,8 @@ select,input {
 
 select,input[type=text], input[type=password] {
   margin: 5px;
-  padding: 0 10px;
-  width: 200px;
   height: 34px;
+  line-height:34px;
   color: #404040;
   background: white;
   border: 1px solid;
@@ -238,6 +237,15 @@ select,input[type=text], input[type=password] {
   -moz-outline-radius: 3px;
   -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
+  vertical-align:middle;
+}
+select{
+	width:200px;
+	padding:0 0px;
+}
+input[type=text],input[type=password]{
+	width:210px;
+	padding:0 10px;
 }
 select:focus,input[type=text]:focus, input[type=password]:focus {
   border-color: #7dc9e2;
@@ -294,7 +302,7 @@ input[type=submit]:active {
 	width:200px;
 }
 
-/*¾B¸n¼h**/
+/*ï¿½Bï¿½nï¿½h**/
 #mydiv {
 	width: 100%;
 	height: 100%;
