--- a/Login/WebRoot/css/main.css
+++ b/Login/WebRoot/css/main.css
@@ -11,7 +11,7 @@ body{
 	
 }
 #left{
-	width:100px;
+	width:18%;
 	height:600px;
 	border:2px blue solid;	
 	overflow:auto;
@@ -21,7 +21,7 @@ body{
 	
 }
 #right{
-	width:100%;
+	width:auto;
 	height:600px;
 	border:4px red solid;
 	overflow:auto;
@@ -38,8 +38,8 @@ body{
 }
 #toolbar{	
 	width:20px;
-	position:relative;
-	top:50%;
+	position:fixed;
+	top:55%;
 	
 }
 
