--- a/Login/WebRoot/css/main.css
+++ b/Login/WebRoot/css/main.css
@@ -7,23 +7,47 @@ body{
 #top{
 	width:100%;
 	height:100px;
-	border:2px green solid;
+	border:1px grey solid;
+	background:#292929;
+	font-size:12px;
+	float:right;
+	color:#99CCCC;
+	
 	
 }
+#top h1{
+	color:white;
+}
+#top #currentTime{
+	color:#99CCCC;
+	float:left;
+}
+#top #lg_info{
+	float:right;
+}
+#top #lg_info a{
+	color:#FF6666;
+	
+}
+
+
 #left{
 	width:18%;
 	height:600px;
-	border:2px blue solid;	
+	border:1px grey solid;	
 	overflow:auto;
 	/*position:absolute;*/
-	float:left;
-	
-	
+	float:left;	
 }
+#left img{
+	vertical-align:middle;
+	border:0px;
+}
+
 #right{
 	width:auto;
 	height:600px;
-	border:4px red solid;
+	border:1px grey solid;
 	overflow:auto;
 	/*position:relative;
 	left:285px;
@@ -33,13 +57,12 @@ body{
 }
 #bottom{
 	width:100%;
-	height:10px;
-	border:2px blue solid;
+	border:1px grey solid;
 }
 #toolbar{	
 	width:20px;
 	position:fixed;
-	top:55%;
+	top:50%;
 	
 }
 
