--- a/Login/WebRoot/css/main.css
+++ b/Login/WebRoot/css/main.css
@@ -1,16 +1,22 @@
 /* CSS Document BACKGROUND-COLOR: #cce0f5; */
-body{
+body,html{
 	padding:0;
 	margin:0;	
+}
+body,html,#main_container{
+	height:100%;
+}
+#main_container{
+	border:4px red solid;
 }
 
 #top{
 	width:100%;
-	height:100px;
+	height:12%;
 	border:1px grey solid;
 	background:#292929;
 	font-size:12px;
-	float:right;
+
 	color:#99CCCC;
 	
 	
@@ -33,7 +39,7 @@ body{
 
 #left{
 	width:18%;
-	height:600px;
+	height:88%;
 	border:1px grey solid;	
 	overflow:auto;
 	/*position:absolute;*/
@@ -46,7 +52,7 @@ body{
 
 #right{
 	width:auto;
-	height:600px;
+	height:88%;
 	border:1px grey solid;
 	overflow:auto;
 	/*position:relative;
@@ -62,7 +68,7 @@ body{
 #toolbar{	
 	width:20px;
 	position:fixed;
-	top:50%;
+	top:52%;
 	
 }
 
