--- a/Login/WebRoot/css/copyright_login.css
+++ b/Login/WebRoot/css/copyright_login.css
@@ -1,6 +1,6 @@
 
 body {	
-	/*background:url(../images/bg.jpg) repeat;*/
+	background:url(../images/bg.jpg) repeat;
 }
 
 .copyright{
@@ -8,8 +8,9 @@ body {
 	float:left;
 	font-size:10px;
 	color:grey;
-	position:relative;
-	/* position:fixed; */
+	/* position:relative;
+	top:350px; */
+	position:fixed;
 	bottom:0;
 	text-align:center;
 }
