--- a/Login/WebRoot/css/main.css
+++ b/Login/WebRoot/css/main.css
@@ -7,7 +7,7 @@ body,html,#main_container{
 	height:100%;
 }
 #main_container{
-	border:4px red solid;
+	/* border:4px red solid; */
 }
 
 #top{
@@ -39,7 +39,7 @@ body,html,#main_container{
 
 #left{
 	width:18%;
-	height:86%;
+	height:83%;
 	border:1px grey solid;	
 	overflow:auto;
 	/*position:absolute;*/
@@ -52,7 +52,7 @@ body,html,#main_container{
 
 #right{
 	width:auto;
-	height:86%;
+	height:83%;
 	border:1px grey solid;
 	overflow:auto;
 	/*position:relative;
@@ -63,6 +63,7 @@ body,html,#main_container{
 }
 #bottom{
 	width:100%;
+	height:3%;
 	border:1px grey solid;
 }
 #toolbar{	
