--- a/Login/WebRoot/css/copyright.css
+++ b/Login/WebRoot/css/copyright.css
@@ -1,16 +1,17 @@
 
-body {	
-	/*background:url(../images/bg.jpg) repeat;*/
+html,body,div{	
+	padding:0;
+	margin:0;
 }
 
 .copyright{
 	width:100%;
-	float:left;
+
 	font-size:10px;
 	color:grey;
 	position:relative;
 	/* position:fixed; */
-	bottom:0;
+	bottom:0px;
 	text-align:center;
 }
 caption{
