--- a/Login/WebRoot/css/main.css
+++ b/Login/WebRoot/css/main.css
@@ -12,7 +12,7 @@ body,html,#main_container{
 
 #top{
 	width:100%;
-	height:14%;
+	height:13%;
 	border:1px grey solid;
 	background:#292929;
 	font-size:12px;
@@ -63,8 +63,9 @@ body,html,#main_container{
 }
 #bottom{
 	width:100%;
-	height:3%;
-	border:1px grey solid;
+	
+	/*border:1px grey solid;*/
+	vertical-align:bottom;
 }
 #toolbar{	
 	width:20px;
@@ -79,8 +80,8 @@ body,html,#main_container{
 /*菜單樣式*/
 .bigfont{font-size:18px;font-weight:bold;}
 .linkbg{background:#F38630}
-.smenu_font{font-size:12px}
-.mmenu_font{font-size:14px}
+.smenu_font{font-size:13px}
+.mmenu_font{font-size:15px}
 a{vertical-align:bottom}
 a:link{color:#335AA4;text-decoration:none;}
 a:visited{color:#335AA4; text-decoration:none} 
