--- a/Login/WebRoot/css/main.css
+++ b/Login/WebRoot/css/main.css
@@ -1,5 +1,5 @@
 /* CSS Document BACKGROUND-COLOR: #cce0f5; */
-body,html{
+body,html,#top,#left,#right,#main_container{
 	padding:0;
 	margin:0;	
 }
@@ -12,12 +12,12 @@ body,html,#main_container{
 
 #top{
 	width:100%;
-	height:14%;
+	height:12%;
 	border:1px grey solid;
 	background:#292929;
 	font-size:12px;
-
 	color:#99CCCC;
+	overflow:hidden;
 	
 	
 }
@@ -39,7 +39,7 @@ body,html,#main_container{
 
 #left{
 	width:18%;
-	height:83%;
+	height:86%;
 	border:1px grey solid;	
 	overflow:auto;
 	/*position:absolute;*/
@@ -52,7 +52,7 @@ body,html,#main_container{
 
 #right{
 	width:auto;
-	height:83%;
+	height:86%;
 	border:1px grey solid;
 	overflow:auto;
 	/*position:relative;
@@ -66,6 +66,8 @@ body,html,#main_container{
 	
 	/*border:1px grey solid;*/
 	vertical-align:bottom;
+
+	
 }
 #toolbar{	
 	width:20px;
