--- a/Login/WebRoot/css/main.css
+++ b/Login/WebRoot/css/main.css
@@ -12,7 +12,8 @@ body,html,#main_container{
 
 #top{
 	width:100%;
-	height:12%;
+	/*height:12%;*/
+	height:90px;
 	border:1px grey solid;
 	background:#292929;
 	font-size:12px;
