--- a/Login/WebRoot/css/select_beautiful.css
+++ b/Login/WebRoot/css/select_beautiful.css
@@ -42,7 +42,7 @@ select{
 	width:100px;
 	width:100px \9;
 }
-#webremits_body input[type=text]{
+#webremits_body input[type=text],#webremits_body2 input[type=text]{
 	width:120px;
 	width:120px \9;
 }
