--- a/Login/WebRoot/loginpage/css/login_style_chrome.css
+++ b/Login/WebRoot/loginpage/css/login_style_chrome.css
@@ -18,7 +18,7 @@ body {
 	line-height: 20px;
 	min-width: 998px;
 	border-top:3px solid #919191;
-	background:url(../images/bg.jpg) repeat;
+	/*background:url(../images/bg.jpg) repeat;*/
 }
 #wrapper {
 	padding: 70px 0 0 0px;
