--- a/Login/WebRoot/css/select_beautiful.css
+++ b/Login/WebRoot/css/select_beautiful.css
@@ -1,6 +1,6 @@
 
 
-input[type=text] {
+input[type=text],[type=password]{
 	border: 2px solid #7A6F6F;
 	border: 2px solid #7A6F6F \9; /*IE*/
 	width: 190px;
